tests/backpack/should_fail/bkpfail33.bkp
unit p where
    signature A where
unit q where
    dependency signature p[A=<A>]
    signature A (T) where
