tests/backpack/should_fail/bkpfail33.stderr
[1 of 2] Processing p
  [1 of 1] Compiling A[sig]           ( p\A.hsig, nothing )
[2 of 2] Processing q
  [1 of 2] Compiling A[sig]           ( q\A.hsig, nothing )
bkpfail33.bkp:5:18: error: [GHC-76037]
    • Not in scope: type constructor or class ‘T’
    • While merging the signatures from:
        • p[A=<A>]:A
        • ...and the local signature for A

